MB-11488: Check memory usage before upr-backfill

Snooze the upr-backfill task if memory usage at that
point is found to be greater than the threshold.

Change-Id: I05aa930854a72bf6016f1138ec705ebff7af6f54
Reviewed-on: http://review.couchbase.org/38758
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>
Tested-by: abhinav dangeti <abhinav@couchbase.com>